# agentlightning-rs

./: Cargo.toml  README.md
crates/agentlightning/: Cargo.toml  README.md
crates/agentlightning-apo/: Cargo.toml
crates/agentlightning-apo/src/: lib.rs
crates/agentlightning-core/: Cargo.toml
crates/agentlightning-core/src/: algorithm.rs  collector.rs  lib.rs  span.rs  store.rs  trainer.rs
crates/agentlightning-grpo/: Cargo.toml
crates/agentlightning-grpo/src/: lib.rs  model.rs
crates/agentlightning-ppo/: Cargo.toml
crates/agentlightning-ppo/src/: lib.rs  model.rs
crates/agentlightning/src/: factory.rs  harness.rs  lib.rs
