[package]
name = "agentlightning-apo"
version = "0.1.0"
edition = "2021"

[dependencies]
agentlightning-core = { path = "../agentlightning-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
