[package]
name = "agentlightning-grpo"
version = "0.1.0"
edition = "2021"

[dependencies]
agentlightning-core = { path = "../agentlightning-core" }
candle-core = "0.9.2"
candle-nn = "0.9.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
