[package]
name = "agentlightning"
version = "0.1.0"
edition = "2021"

[dependencies]
agentlightning-core = { path = "../agentlightning-core" }
agentlightning-ppo = { path = "../agentlightning-ppo", optional = true }
agentlightning-apo = { path = "../agentlightning-apo", optional = true }
agentlightning-grpo = { path = "../agentlightning-grpo", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

[features]
default = []
ppo = ["dep:agentlightning-ppo"]
apo = ["dep:agentlightning-apo"]
grpo = ["dep:agentlightning-grpo"]

[dev-dependencies]
tempfile = "3.0"
